<resources>
    <string name="app_name">PockeCard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_login">Log in</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="action_skip_sign_in">Skip</string>
    <string name="prompt_name">Student Name</string>
    <string name="action_student_number">Student Number</string>
    <string name="prompt_student_number">Student Number</string>
    <string name="action_create_student">Create student</string>
    <string name="action_cancel_create">Cancel</string>
    <string name="prompt_student_name">Student Name</string>
    <string name="title_activity_register_card">RegisterCardActivity</string>
</resources>
